--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,8 +105,8 @@ jobs:
         env:
           HOST: ${{ secrets.SSH_HOST }}
         run:
-          ssh i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$HOST << 'EOF'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$HOST << 'EOF'
             sudo docker pull sayancode/blog-hub-server
             cd /home/ubuntu/blog-hub
-            sudo docker compose up -d --no-deps blog-hub-server
+            sudo docker compose up -d --no-deps server
           EOF
